--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon",
     "dev:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9222 -r ts-node/register src/main.ts",
     "lint": "eslint ./src/**",
+    "generate": "prisma generate",
     "lint:fix": "eslint ./src/** --fix",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,10 +17,12 @@
   "author": "Anton Larichev",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.7.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "inversify": "^6.0.1",
     "reflect-metadata": "^0.1.13",
@@ -35,6 +38,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
+    "prisma": "^3.7.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
